Update code for collecting list from stream to follow Java 11